--- a/style.css
+++ b/style.css
@@ -52,10 +52,13 @@ header {
       margin: 0%;
       transition: all 0.0s;
   }
+  
   button:hover {
       background-color: #0e0e15;
   }
-  button:active {
+  
+  button:active,
+.active {
       background-color: #29293d;
       color: white;
   }
@@ -74,4 +77,42 @@ header {
       -webkit-flex-direction: column;
       flex-direction: column;
   }
+  }
+  .dropdown {
+    display: inline-block;
+    position: relative;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #29293d;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content a {
+    color: rgba(255, 255, 255, 0.653);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  a:link {
+    color: rgba(255, 255, 255, 0.653);;
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+  }
+  a:hover, a:active {
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+  }
+  .dropbtn {
+    color: white;
+    font-size: 16px;
+    border: none;
   }
